# music_api

./: .env  .gitignore  README.md  alembic.ini  log.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 0113e08f334f_add_duration.py  27fcbaf63615_test3.py  2e3ca29e21f5_add_music_covers.py  3e5ab0deeec0_add_music_duration.py  50c8468ef149_test2.py  5775dae09e63_test1.py  586f7b548fec_change_username_max_len.py  623dc38745f9_change_float_type.py  62516bb1e761_add_music_play.py  631c4f19a113_init.py  7ea4909fc53d_add_user_favorite_default.py  7fd2abbc384c_add_user_fav.py  846171bbc1d9_init.py  8f2eb5b67766_music_file_nullable.py  9149e3c8a19f_add_music_table.py  9f6d6fae46bb_delete_duration.py  b4563432005b_add_nullable_music_duration.py  bafe692d4a5c_add_music_play_count.py  be82eb3f8d56_title_nullable.py  c160b9395b9a_add_music_play_coun.py  d44ed6aed635_add_music_play_count_default_value.py  dfde852425b3_add_music_play.py
src/authorization/: models.py  repository.py  router.py  schemas.py  service.py  utils.py
src/music/: models.py  repository.py  router.py  schemas.py  service.py  utils.py
src/registration/: repository.py  router.py  schemas.py  service.py  utils.py
src/settings/: database.py  exceptions.py  models.py  repository.py  service.py  settings.py
src/static/: router.py
src/user/: models.py  repository.py  router.py  schemas.py  service.py
